code-server/code-gateway.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: code-gateway
  namespace: pod-broker-system
spec:
  selector:
    # updated with patch to match target ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "code.endpoints.${PROJECT_ID}.cloud.goog"
        - "*.code.endpoints.${PROJECT_ID}.cloud.goog"
        - "code-port-3000.endpoints.${PROJECT_ID}.cloud.goog"
        - "code-port-8000.endpoints.${PROJECT_ID}.cloud.goog"
        - "code-port-8080.endpoints.${PROJECT_ID}.cloud.goog"
